--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:background="@color/colorPrimary"
+        android:onClick="mostrarMensaje"
         android:text="@string/bt_toast"
         android:textColor="@android:color/white"
         android:textSize="24sp"
