--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,53 +8,43 @@
 
     <Button
         android:id="@+id/bt_toast"
-        android:layout_width="256dp"
+        android:layout_width="0dp"
         android:layout_height="62dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
         android:background="@color/colorPrimary"
         android:onClick="mostrarMensaje"
         android:text="@string/bt_toast"
         android:textColor="@android:color/white"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/bt_count"
-        android:layout_width="269dp"
+        android:layout_width="0dp"
         android:layout_height="63dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="4dp"
         android:background="@color/colorPrimary"
         android:onClick="incrementarContador"
         android:text="@string/bt_count"
         android:textColor="@android:color/white"
         android:textSize="24sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/bt_toast"
-        app:layout_constraintStart_toEndOf="@+id/bt_toast" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/txt_contador"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="24dp"
         android:background="@color/colorAmarillo"
         android:gravity="center"
         android:text="@string/txt_count"
         android:textColor="@android:color/black"
         android:textSize="200sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bt_count"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_toast"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_toast" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
